Update dependency org.jacoco:org.jacoco.agent to v0.8.10 (#1749)
Co-authored-by: Andreas Turban <andreas.turban@net-baustelle.de>
Co-authored-by: Leonard Brünings <lbruenings@gradle.com>